--- a/P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css
+++ b/P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css
@@ -21,10 +21,10 @@
         h1, h2 {
             color: #444;
         }
-        .experiencia {
+        .info-tecnica {
             margin-bottom: 20px;
         }
-        .experiencia h2 {
+        .info-tecnica h2 {
             border-bottom: 2px solid #eee;
             padding-bottom: 5px;
         }
