--- a/P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css
+++ b/P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css
@@ -9,12 +9,12 @@
             line-height: 1.6;
             margin: 0;
             padding: 20px;
-            color: #333;
+            color: #000000;
         }
         .personal-info {
             max-width: 800px;
             margin: auto;
-            background: #fff;
+            background: #f8f4f4;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -22,11 +22,11 @@
             color: #444;
         }
         .info-tecnica {
-            margin-bottom: 20px;
+            margin-bottom: 50px;
         }
         .info-tecnica h2 {
-            border-bottom: 2px solid #eee;
-            padding-bottom: 5px;
+            border-bottom: 10px solid #f511d6;
+            padding-bottom: 10px;
         }
         ul {
             list-style-type: none;
